// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StartGradingButton component component snapshotes snapshot: graded, confirmOverride (startGrading callback) 1`] = `
<React.Fragment>
  <Button
    iconAfter="Highlight"
    onClick={[MockFunction this.handleClick]}
    variant="primary"
  >
    Override grade
  </Button>
  <OverrideGradeConfirmModal
    isOpen={true}
    onCancel={[MockFunction this.hideConfirmOverrideGrade]}
    onConfirm={[MockFunction this.confirmOverrideGrade]}
  />
  <StopGradingConfirmModal
    isOpen={false}
    isOverride={true}
    onCancel={[MockFunction this.hideConfirmStopGrading]}
    onConfirm={[MockFunction this.confirmStopGrading]}
  />
</React.Fragment>
`;

exports[`StartGradingButton component component snapshotes snapshot: inProgress, isOverride, confirmStop (stopGrading callback) 1`] = `
<React.Fragment>
  <Button
    iconAfter="Cancel"
    onClick={[MockFunction this.handleClick]}
    variant="primary"
  >
    Stop grading this response
  </Button>
  <OverrideGradeConfirmModal
    isOpen={false}
    onCancel={[MockFunction this.hideConfirmOverrideGrade]}
    onConfirm={[MockFunction this.confirmOverrideGrade]}
  />
  <StopGradingConfirmModal
    isOpen={true}
    isOverride={true}
    onCancel={[MockFunction this.hideConfirmStopGrading]}
    onConfirm={[MockFunction this.confirmStopGrading]}
  />
</React.Fragment>
`;

exports[`StartGradingButton component component snapshotes snapshot: locked (null) 1`] = `null`;

exports[`StartGradingButton component component snapshotes snapshot: ungraded (startGrading callback) 1`] = `
<React.Fragment>
  <Button
    iconAfter="Highlight"
    onClick={[MockFunction this.handleClick]}
    variant="primary"
  >
    Start Grading
  </Button>
  <OverrideGradeConfirmModal
    isOpen={false}
    onCancel={[MockFunction this.hideConfirmOverrideGrade]}
    onConfirm={[MockFunction this.confirmOverrideGrade]}
  />
  <StopGradingConfirmModal
    isOpen={false}
    isOverride={false}
    onCancel={[MockFunction this.hideConfirmStopGrading]}
    onConfirm={[MockFunction this.confirmStopGrading]}
  />
</React.Fragment>
`;
